<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transaction">

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.money_management.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.example.money_management.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.example.money_management.ui.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.money_management.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"/>
</navigation>